--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="grid place-items-center p-8">
-    <h1 class="text-xl font-bold text-emerald-700">Tailwind Template E2022</h1>
-    <p class="text-emerald-500">
-      Powered by <a href="https://vitejs.dev/guide">Vite</a>
-    </p>
-    <img src="img/vite.svg" alt="Vite Logo" />
+  <body class="bg-red-100">
+    <img src="pierre.jpeg" alt="" />
+    <img src="pierre.jpeg" alt="" />
+    <div class="flex justify-center">
+      <img class="zoom" src="camerawpierre.png" alt="" />
+      <div class="overlay absolute h-screen w-screen">
+        <img class="block" src="white.png" alt="" />
+      </div>
+    </div>
 
+    <div id="scroll" class="flex overflow-x-auto overscroll-y-auto">
+      <img src="pierre.jpeg" alt="" />
+      <img src="pierre.jpeg" alt="" />
+      <img src="pierre.jpeg" alt="" />
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
