--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,17 @@
     <img src="pierre.jpeg" alt="" />
     <img src="pierre.jpeg" alt="" />
     <div class="flex justify-center">
-      <img class="zoom" src="camerawpierre.png" alt="" />
-      <div class="overlay absolute h-screen w-screen">
+      <div>
+        <img class="zoom exit" src="camerawpierre.png" alt="" />
+      </div>
+      <div class="picture absolute">
+        <img class="-z-10 max-w-full" src="pierre.jpeg" alt="" />
+      </div>
+      <div class="overlay absolute h-screen w-screen opacity-0">
         <img class="block" src="white.png" alt="" />
       </div>
     </div>
+    <div class="overlaytrigger"></div>
 
     <div id="scroll" class="flex overflow-x-auto overscroll-y-auto">
       <img src="pierre.jpeg" alt="" />
