--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="https://use.typekit.net/ftc1ket.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="bg-red-100">
-    <img src="pierre.jpeg" alt="" />
-    <img src="pierre.jpeg" alt="" />
+  <body class="bg-[#24424B]">
+    <div>
+      <div class="absolute">
+        <div><p>Uperfekt</p></div>
+        <div><p>Perfekt</p></div>
+      </div>
+
+      <div class="">
+        <img class="absolute -top-1/2" src="sten_simons_overlay.png" alt="" />
+        <video autoplay muted loop src="hero.mp4"></video>
+      </div>
+    </div>
+    <div class="fixed -z-30 flex h-full w-full justify-center">
+      <img class="w-auto object-cover" src="line.png" alt="" />
+    </div>
+
     <div class="flex justify-center">
       <div>
         <img class="zoom exit" src="camerawpierre.png" alt="" />
@@ -27,6 +41,7 @@
       <img src="pierre.jpeg" alt="" />
       <img src="pierre.jpeg" alt="" />
     </div>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
