--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,96 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="https://use.typekit.net/ftc1ket.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Pierre Falcke</title>
   </head>
   <body class="bg-[#24424B]">
-    <div>
-      <div class="absolute">
-        <div><p>Uperfekt</p></div>
-        <div><p>Perfekt</p></div>
-      </div>
-
-      <div class="">
-        <img class="absolute -top-1/2" src="sten_simons_overlay.png" alt="" />
-        <video autoplay muted loop src="hero.mp4"></video>
-      </div>
-    </div>
     <div class="fixed -z-30 flex h-full w-full justify-center">
       <img class="w-auto object-cover" src="line.png" alt="" />
+    </div>
+    <div class="-z-20">
+      <img
+        class="absolute left-56 -top-3/4 overflow-hidden"
+        src="sten_simons_overlay.png"
+        alt=""
+      />
+      <video
+        class="min-w-screen min-h-screen"
+        autoplay
+        muted
+        loop
+        src="hero.mp4"
+      ></video>
+    </div>
+    <div class="parallaxcontainer">
+      <div class="staggeranimation sticky">
+        <div class="mt-10 ml-10 text-9xl text-[#E9C423]">
+          <h1>Perfekt</h1>
+        </div>
+        <div class="ml-10 text-9xl text-[#E9C423]">
+          <h1>Uperfekt</h1>
+        </div>
+      </div>
+      <div class="sticky left-32 top-3/4 z-10 m-5 text-xl text-white">
+        <p class="w-1/3 p-10">
+          Pierre Falcke. Du ved formentligt ikke hvem han er. Men indtil for
+          kort tid siden, så du hans værker et par gange om dagen, hver dag,
+          året rundt.
+        </p>
+        <p class="w-1/3 p-10">
+          Pierre Falcke var en af verdens bedst sælgende stock-fotografer, og
+          han solgte over 2 millioner fotos om året.
+        </p>
+        <p class="w-1/3 p-10">
+          Men Pierre kunne ikke drømme om at bruge sine egne fotos - faktisk kan
+          han ikke fordrage sit eget arbejde.
+        </p>
+      </div>
+      <div>
+        <img class="absolute top-2/3" src="iil_PerfektUperfekt.png" alt="" />
+      </div>
+    </div>
+
+    <div class="sticky grid grid-cols-2">
+      <div class="">
+        <h2 class="mt-30 m-20 text-7xl text-white">Stock Fotografen</h2>
+      </div>
+      <div class="justify-self-end">
+        <img class="mt-80" src="iil_StockPhoto.png" alt="" />
+      </div>
+      <div class="mx-20 my-10 text-base text-white">
+        <p class="m-auto w-96">
+          Pierres interesse for foto startede som ganske ung - som 10-årig fik
+          han sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var
+          før den digitale revolution, så alle Pierres lommepenge blev brugt på
+          filmruller og fremkaldelse af film. Pierre fortsatte med at
+          fotografere på film op gennem gymnasietiden.
+        </p>
+      </div>
+      <div class="my-48 mx-20 text-base text-white">
+        <p class="m-auto w-96">
+          Pierre over til digital fotografering i starten af 2000’erne, da han
+          begyndte at studere fotografisk kommunikation på DMJX. Her åbnede en
+          ny verden sig: Reklamefotografering i studie, lyssætning og
+          manipulering af billeder i Photoshop blev hans nye stil.
+        </p>
+      </div>
+      <div class="mx-20 my-10 text-base text-white">
+        <p class="m-auto w-96">
+          Pierres interesse for foto startede som ganske ung - som 10-årig fik
+          han sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var
+          før den digitale revolution, så alle Pierres lommepenge blev brugt på
+          filmruller og fremkaldelse af film. Pierre fortsatte med at
+          fotografere på film op gennem gymnasietiden.
+        </p>
+      </div>
+      <div class="my-48 mx-20 text-base text-white">
+        <p class="m-auto w-96">
+          Pierre over til digital fotografering i starten af 2000’erne, da han
+          begyndte at studere fotografisk kommunikation på DMJX. Her åbnede en
+          ny verden sig: Reklamefotografering i studie, lyssætning og
+          manipulering af billeder i Photoshop blev hans nye stil.
+        </p>
+      </div>
     </div>
 
     <div class="flex justify-center">
