--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,8 @@
     <div class="fixed -z-30 flex h-full w-full justify-center">
       <img class="w-auto object-cover" src="line.png" alt="" />
     </div>
-    <div class="-z-20">
-      <img
-        class="absolute left-56 -top-3/4 overflow-hidden"
-        src="sten_simons_overlay.png"
-        alt=""
-      />
-      <video
-        class="min-w-screen min-h-screen"
-        autoplay
-        muted
-        loop
-        src="hero.mp4"
-      ></video>
-    </div>
-    <div class="parallaxcontainer">
-      <div class="staggeranimation sticky">
+    <div class="">
+      <div class="staggeranimation absolute">
         <div class="mt-10 ml-10 text-9xl text-[#E9C423]">
           <h1>Perfekt</h1>
         </div>
@@ -34,7 +20,7 @@
           <h1>Uperfekt</h1>
         </div>
       </div>
-      <div class="sticky left-32 top-3/4 z-10 m-5 text-xl text-white">
+      <div class="absolute left-32 top-3/4 z-10 m-5 text-xl text-white">
         <p class="w-1/3 p-10">
           Pierre Falcke. Du ved formentligt ikke hvem han er. Men indtil for
           kort tid siden, så du hans værker et par gange om dagen, hver dag,
@@ -51,6 +37,21 @@
       </div>
       <div>
         <img class="absolute top-2/3" src="iil_PerfektUperfekt.png" alt="" />
+      </div>
+
+      <div class="">
+        <img
+          class="absolute left-56 -top-3/4 overflow-hidden"
+          src="sten_simons_overlay.png"
+          alt=""
+        />
+        <video
+          class="min-w-screen min-h-screen"
+          autoplay
+          muted
+          loop
+          src="hero.mp4"
+        ></video>
       </div>
     </div>
 
