--- a/src/index.html
+++ b/src/index.html
@@ -90,10 +90,26 @@
       </div>
       <div class="my-48 mx-20 text-base text-white">
         <p class="m-auto w-96">
-          Pierre over til digital fotografering i starten af 2000’erne, da han
-          begyndte at studere fotografisk kommunikation på DMJX. Her åbnede en
-          ny verden sig: Reklamefotografering i studie, lyssætning og
-          manipulering af billeder i Photoshop blev hans nye stil.
+          På det tidspunkt var stock-foto industrien i starten af en revolution:
+          De første online stock-foto websites begyndte at komme på markedet,
+          men de store, etablerede spillere på markedet holdt lidt igen. Pierre
+          så det for sig: “Om ganske få år er hele branchen digital, og dem der
+          ikke hopper med på den digitale vogn, lukker.”
+        </p>
+      </div>
+      <div class="mx-20 my-10 text-base text-white">
+        <p class="m-auto w-96">
+          Så Pierre gav sig selv en udfordring: At blive landets bedst sælgende
+          stock-fotograf. Pierre lejede et gammelt, billigt erhvervslokale i
+          Ishøj industri, fik fløjet billige skuespillere ind fra Polen og
+          Baltikum, og fotograferede 10 timer om dagen.
+        </p>
+      </div>
+      <div class="col-span-2 my-48 mx-20 text-lg font-bold text-white">
+        <p class="m-auto w-1/2">
+          Pierres profeti om stock-foto branchen holdt stik. Pierre var allerede
+          en af landets bedst sælgende stock-fotografer, før han blev færdig med
+          studiet på DMJX.
         </p>
       </div>
     </div>
