--- a/src/index.html
+++ b/src/index.html
@@ -7,39 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pierre Falcke</title>
   </head>
-  <body class="scroll-smooth bg-[#24424B]">
-    <div class="fixed -z-30 flex h-full w-full justify-center">
+  <body class="overflow-clip overflow-y-scroll scroll-smooth">
+    <div class="fixed -z-30 flex h-full w-full justify-center bg-[#24424B]">
       <img class="w-auto object-cover" src="line.png" alt="" />
     </div>
-    <div class="">
-      <div class="staggeranimation absolute">
-        <div class="mt-10 ml-10 text-9xl text-[#E9C423]">
-          <h1>Perfekt</h1>
-        </div>
-        <div class="ml-10 text-9xl text-[#E9C423]">
-          <h1>Uperfekt</h1>
-        </div>
-      </div>
-      <div class="absolute left-32 top-3/4 z-10 m-5 text-xl text-white">
-        <p class="w-1/3 p-10">
-          Pierre Falcke. Du ved formentligt ikke hvem han er. Men indtil for
-          kort tid siden, så du hans værker et par gange om dagen, hver dag,
-          året rundt.
-        </p>
-        <p class="w-1/3 p-10">
-          Pierre Falcke var en af verdens bedst sælgende stock-fotografer, og
-          han solgte over 2 millioner fotos om året.
-        </p>
-        <p class="w-1/3 p-10">
-          Men Pierre kunne ikke drømme om at bruge sine egne fotos - faktisk kan
-          han ikke fordrage sit eget arbejde.
-        </p>
-      </div>
-      <div>
-        <img class="absolute top-2/3" src="iil_PerfektUperfekt.png" alt="" />
-      </div>
-
-      <div class="">
+    <section>
+      <!-- Baggrundsvideo og hero sticky -->
+      <div class="sticky top-0 h-screen">
         <img
           class="absolute left-56 -top-3/4 overflow-hidden"
           src="sten_simons_overlay.png"
@@ -53,17 +27,53 @@
           src="hero.mp4"
         ></video>
       </div>
-    </div>
 
-    <div class="sticky grid grid-cols-2">
+      <!-- Stagger titel -->
+
+      <div class="staggeranimation absolute top-0 z-10">
+        <div class="mt-10 ml-10 text-9xl text-[#E9C423]">
+          <h1>Perfekt</h1>
+        </div>
+        <div class="ml-10 text-9xl text-[#E9C423]">
+          <h1>Uperfekt</h1>
+        </div>
+      </div>
+
+      <!-- Introduktions tekst  -->
+      <div
+        class="relative left-72 -top-96 z-10 h-full overflow-hidden text-xl text-white"
+      >
+        <div class="intro_para">
+          <p class="w-1/3 p-10">
+            Pierre Falcke. Du ved formentligt ikke hvem han er. Men indtil for
+            kort tid siden, så du hans værker et par gange om dagen, hver dag,
+            året rundt.
+          </p>
+        </div>
+        <div class="intro_para">
+          <p class="w-1/3 p-10">
+            Pierre Falcke var en af verdens bedst sælgende stock-fotografer, og
+            han solgte over 2 millioner fotos om året.
+          </p>
+        </div>
+        <div class="intro_para">
+          <p class="w-1/3 p-10">
+            Men Pierre kunne ikke drømme om at bruge sine egne fotos - faktisk
+            kan han ikke fordrage sit eget arbejde.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <div class="">
       <div class="">
-        <h2 class="mt-30 m-20 text-7xl text-white">Stock Fotografen</h2>
+        <h2 class="text-7xl text-white">Stock Fotografen</h2>
       </div>
-      <div class="justify-self-end">
-        <img class="mt-80" src="iil_StockPhoto.png" alt="" />
+      <div class="">
+        <img class="" src="iil_StockPhoto.png" alt="" />
       </div>
-      <div class="mx-20 my-10 text-base text-white">
-        <p class="m-auto w-96">
+      <div class="scrollzoom z-67 absolute left-1/3 text-base text-white">
+        <p class="scrollzoomimg w-96">
           Pierres interesse for foto startede som ganske ung - som 10-årig fik
           han sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var
           før den digitale revolution, så alle Pierres lommepenge blev brugt på
@@ -71,16 +81,16 @@
           fotografere på film op gennem gymnasietiden.
         </p>
       </div>
-      <div class="my-48 mx-20 text-base text-white">
-        <p class="m-auto w-96">
+      <div class="scrollzoom z-66 absolute left-1/3 text-base text-white">
+        <p class="scrollzoomimg w-96">
           Pierre over til digital fotografering i starten af 2000’erne, da han
           begyndte at studere fotografisk kommunikation på DMJX. Her åbnede en
           ny verden sig: Reklamefotografering i studie, lyssætning og
           manipulering af billeder i Photoshop blev hans nye stil.
         </p>
       </div>
-      <div class="mx-20 my-10 text-base text-white">
-        <p class="m-auto w-96">
+      <div class="scrollzoom z-65 absolute left-1/3 text-base text-white">
+        <p class="scrollzoomimg w-96">
           Pierres interesse for foto startede som ganske ung - som 10-årig fik
           han sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var
           før den digitale revolution, så alle Pierres lommepenge blev brugt på
@@ -88,8 +98,8 @@
           fotografere på film op gennem gymnasietiden.
         </p>
       </div>
-      <div class="my-48 mx-20 text-base text-white">
-        <p class="m-auto w-96">
+      <div class="scrollzoom z-64 absolute left-1/3 text-base text-white">
+        <p class="scrollzoomimg w-96">
           På det tidspunkt var stock-foto industrien i starten af en revolution:
           De første online stock-foto websites begyndte at komme på markedet,
           men de store, etablerede spillere på markedet holdt lidt igen. Pierre
@@ -97,16 +107,18 @@
           ikke hopper med på den digitale vogn, lukker.”
         </p>
       </div>
-      <div class="mx-20 my-10 text-base text-white">
-        <p class="m-auto w-96">
+      <div class="scrollzoom z-63 absolute left-1/3 text-base text-white">
+        <p class="scrollzoomimg w-96">
           Så Pierre gav sig selv en udfordring: At blive landets bedst sælgende
           stock-fotograf. Pierre lejede et gammelt, billigt erhvervslokale i
           Ishøj industri, fik fløjet billige skuespillere ind fra Polen og
           Baltikum, og fotograferede 10 timer om dagen.
         </p>
       </div>
-      <div class="col-span-2 my-48 mx-20 text-lg font-bold text-white">
-        <p class="m-auto w-1/2">
+      <div
+        class="scrollzoom z-62 absolute left-1/3 text-lg font-bold text-white"
+      >
+        <p class="scrollzoomimg w-1/2">
           Pierres profeti om stock-foto branchen holdt stik. Pierre var allerede
           en af landets bedst sælgende stock-fotografer, før han blev færdig med
           studiet på DMJX.
@@ -171,7 +183,7 @@
         <li
           class="flex h-[100vh] w-[42vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
         >
-          <div class="up_down w-64 translate-y-36 flex-col">
+          <div class="up_down w-64 translate-y-36 snap-center flex-col">
             <img class="m-3" src="lomo-diana-f.webp" alt="" />
             <img class="m-3" src="mcd.webp" alt="" />
             <img class="m-3" src="lomo-smena.webp" alt="" />
@@ -265,10 +277,30 @@
             <img src="glitch4.webp" alt="" />
           </div>
         </li>
+        <li
+          class="flex h-[100vh] w-[100vw] flex-auto flex-shrink-0 flex-grow-0 flex-col items-start justify-center overflow-hidden"
+        >
+          <section class="sticky">
+            <div class="videocontainer sticky top-1/4 w-full">
+              <video
+                src="glitch_video.mp4"
+                muted
+                loop
+                playsinline
+                class="w-full"
+                id="videofil"
+              ></video>
+            </div>
+            <div class="videoarticle h-screen"></div>
+          </section>
+        </li>
       </ul>
     </section>
-    <div class="sticky -z-40 bg-[url('over-out-ilm.webp')] bg-contain">
-      <div class="z-20 grid grid-cols-2">
+    <section class="w-screen bg-[url('over-out-ilm.webp')] bg-contain">
+      <div class="fixed flex h-full w-full justify-center">
+        <img class="w-auto object-cover" src="line.png" alt="" />
+      </div>
+      <div class="grid grid-cols-2">
         <div class="col-span-2 opacity-70">
           <img src="begyndelse.png" alt="" />
         </div>
@@ -314,17 +346,22 @@
           </div>
         </div>
 
-        <div
-          class="col-span-2 grid h-[170vh] w-[100vw] bg-[url('pierre_yellow.png')] bg-cover bg-no-repeat"
-        >
-          <p class="absolute font-bold text-white">
-            “Nu kan jeg leve livet igen. Jeg føler mig frisk. Jeg føler mig fri.
-            Jeg føler mig genfødt.”
-          </p>
+        <div class="col-span-2 m-auto">
+          <img src="pierre_yellow.png" alt="" />
         </div>
       </div>
+    </section>
+    <div class="grid h-screen w-screen bg-black">
+      <p class="m-auto font-bold text-white">
+        “Nu kan jeg leve livet igen. Jeg føler mig frisk. Jeg føler mig fri. Jeg
+        føler mig genfødt.”
+      </p>
     </div>
+
     <footer></footer>
+    <div
+      class="progress-bar fixed left-0 top-0 right-0 h-4 w-full origin-top-left bg-rose-900"
+    ></div>
 
     <script type="module" src="./main.js"></script>
   </body>
