--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div class="fixed -z-30 flex h-full w-full justify-center bg-[#24424B]">
       <img class="w-auto object-cover" src="line.png" alt="" />
     </div>
-    <section>
+    <section class="">
       <!-- Baggrundsvideo og hero sticky -->
       <div class="sticky top-0 h-screen">
         <img
@@ -65,66 +65,67 @@
       </div>
     </section>
 
-    <div class="">
+    <section class="h-screen">
       <div class="">
         <h2 class="text-7xl text-white">Stock Fotografen</h2>
       </div>
-      <div class="">
+      <!-- <div class="">
         <img class="" src="iil_StockPhoto.png" alt="" />
+      </div> -->
+      <div class="absolute h-screen w-screen">
+        <div
+          class="scrollzoom z-67 absolute left-1/3 -ml-52 text-base text-white"
+        >
+          <p class="scrollzoomimg w-96">
+            Pierres interesse for foto startede som ganske ung - som 10-årig fik
+            han sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var
+            før den digitale revolution, så alle Pierres lommepenge blev brugt
+            på filmruller og fremkaldelse af film. Pierre fortsatte med at
+            fotografere på film op gennem gymnasietiden.
+          </p>
+        </div>
+        <div
+          class="scrollzoom z-66 absolute left-1/3 ml-52 text-base text-white"
+        >
+          <p class="scrollzoomimg w-96">
+            Pierre over til digital fotografering i starten af 2000’erne, da han
+            begyndte at studere fotografisk kommunikation på DMJX. Her åbnede en
+            ny verden sig: Reklamefotografering i studie, lyssætning og
+            manipulering af billeder i Photoshop blev hans nye stil.
+          </p>
+        </div>
+        <div
+          class="scrollzoom z-64 absolute left-1/3 -ml-52 text-base text-white"
+        >
+          <p class="scrollzoomimg w-96">
+            På det tidspunkt var stock-foto industrien i starten af en
+            revolution: De første online stock-foto websites begyndte at komme
+            på markedet, men de store, etablerede spillere på markedet holdt
+            lidt igen. Pierre så det for sig: “Om ganske få år er hele branchen
+            digital, og dem der ikke hopper med på den digitale vogn, lukker.”
+          </p>
+        </div>
+        <div
+          class="scrollzoom z-63 absolute left-1/3 ml-52 text-base text-white"
+        >
+          <p class="scrollzoomimg w-96">
+            Så Pierre gav sig selv en udfordring: At blive landets bedst
+            sælgende stock-fotograf. Pierre lejede et gammelt, billigt
+            erhvervslokale i Ishøj industri, fik fløjet billige skuespillere ind
+            fra Polen og Baltikum, og fotograferede 10 timer om dagen.
+          </p>
+        </div>
+        <div
+          class="scrollzoom z-62 absolute left-1/3 text-lg font-bold text-white"
+        >
+          <p class="scrollzoomimg w-1/2">
+            Pierres profeti om stock-foto branchen holdt stik. Pierre var
+            allerede en af landets bedst sælgende stock-fotografer, før han blev
+            færdig med studiet på DMJX.
+          </p>
+        </div>
       </div>
-      <div class="scrollzoom z-67 absolute left-1/3 text-base text-white">
-        <p class="scrollzoomimg w-96">
-          Pierres interesse for foto startede som ganske ung - som 10-årig fik
-          han sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var
-          før den digitale revolution, så alle Pierres lommepenge blev brugt på
-          filmruller og fremkaldelse af film. Pierre fortsatte med at
-          fotografere på film op gennem gymnasietiden.
-        </p>
-      </div>
-      <div class="scrollzoom z-66 absolute left-1/3 text-base text-white">
-        <p class="scrollzoomimg w-96">
-          Pierre over til digital fotografering i starten af 2000’erne, da han
-          begyndte at studere fotografisk kommunikation på DMJX. Her åbnede en
-          ny verden sig: Reklamefotografering i studie, lyssætning og
-          manipulering af billeder i Photoshop blev hans nye stil.
-        </p>
-      </div>
-      <div class="scrollzoom z-65 absolute left-1/3 text-base text-white">
-        <p class="scrollzoomimg w-96">
-          Pierres interesse for foto startede som ganske ung - som 10-årig fik
-          han sin fars gamle Rollei-kamera, og begyndte at skyde løs. Det var
-          før den digitale revolution, så alle Pierres lommepenge blev brugt på
-          filmruller og fremkaldelse af film. Pierre fortsatte med at
-          fotografere på film op gennem gymnasietiden.
-        </p>
-      </div>
-      <div class="scrollzoom z-64 absolute left-1/3 text-base text-white">
-        <p class="scrollzoomimg w-96">
-          På det tidspunkt var stock-foto industrien i starten af en revolution:
-          De første online stock-foto websites begyndte at komme på markedet,
-          men de store, etablerede spillere på markedet holdt lidt igen. Pierre
-          så det for sig: “Om ganske få år er hele branchen digital, og dem der
-          ikke hopper med på den digitale vogn, lukker.”
-        </p>
-      </div>
-      <div class="scrollzoom z-63 absolute left-1/3 text-base text-white">
-        <p class="scrollzoomimg w-96">
-          Så Pierre gav sig selv en udfordring: At blive landets bedst sælgende
-          stock-fotograf. Pierre lejede et gammelt, billigt erhvervslokale i
-          Ishøj industri, fik fløjet billige skuespillere ind fra Polen og
-          Baltikum, og fotograferede 10 timer om dagen.
-        </p>
-      </div>
-      <div
-        class="scrollzoom z-62 absolute left-1/3 text-lg font-bold text-white"
-      >
-        <p class="scrollzoomimg w-1/2">
-          Pierres profeti om stock-foto branchen holdt stik. Pierre var allerede
-          en af landets bedst sælgende stock-fotografer, før han blev færdig med
-          studiet på DMJX.
-        </p>
-      </div>
-    </div>
+    </section>
 
     <div class="flex justify-center">
       <div>
